refactor: complete source-only cleanup and consolidation sprint
- make profile slice contracts authoritative and shrink facade debt
- remove legacy ViewModel fallback paths and restore UiDataAdapters boundaries
- centralize profile normalization and shared user presentation helpers
- slim REST route registration and remove wrapper-only compatibility seams
- split JdbiUserStorage into focused normalized-profile collaborators
- extract focused UI collaborators for profile, matches, and chat flows
- remove dead ServiceRegistry compatibility-calculator export
- update tracking plan with completed tasks and verification results

Verified with mvn spotless:apply verify
BUILD SUCCESS: 1712 tests run, 0 failures, 0 errors, 0 skipped